@@ -9,9 +9,7 @@ import com.example.deal.exception.ApplicationNotFoundException;
 import com.example.deal.exception.OfferDoesNotExistException;
 import com.example.deal.mapper.MergeClientService;
 import com.example.deal.model.Application;
-import com.example.deal.model.Client;
 import com.example.deal.model.Credit;
-import com.example.deal.model.Passport;
 import com.example.deal.model.enums.ApplicationStatus;
 import com.example.deal.model.enums.CreditStatus;
 import com.example.deal.repository.JpaApplicationRepository;
@@ -19,7 +17,6 @@ import com.example.deal.repository.JpaClientRepository;
 import com.example.deal.service.RepositoryService;
 import com.example.deal.service.impl.RepositoryServiceImpl;
 import jakarta.transaction.Transactional;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -51,156 +48,144 @@ public class RepositoryServiceTest extends IntegrationEnvironment {
     @Autowired
     private MergeClientService mergeClientService;
 
+    private Application application;
+
     @BeforeEach
     void setUp() {
         repositoryService = new RepositoryServiceImpl(clientRepository, applicationRepository, conversionService, mergeClientService);
+
+        //save 1 application in db
+        application = repositoryService.getApplicationById(
+                repositoryService.createApplicationWithClient(getTestLoanApplicationRequestDTO())
+        );
+    }
+
+    private LoanApplicationRequestDTO getTestLoanApplicationRequestDTO() {
+        return new LoanApplicationRequestDTO(BigDecimal.valueOf(100000),
+                6, "User", "Test", "Test", "user@mail.com",
+                LocalDate.of(2000, 1, 1), "0000", "000000"
+        );
     }
 
     @Transactional
     @Test
     void testCreateApplicationWithClient() {
-        LoanApplicationRequestDTO loanApplicationRequest = new LoanApplicationRequestDTO(BigDecimal.valueOf(100000),
-                6, "User", "Test", "Test", "user@mail.com",
-                LocalDate.of(2000, 1, 1), "0000", "000000"
-        );
-
-        Long id = repositoryService.createApplicationWithClient(loanApplicationRequest);
-        assertEquals(id, applicationRepository.findAll().stream().sorted().toList().getLast().getApplicationId());
+        Long id = repositoryService.createApplicationWithClient(getTestLoanApplicationRequestDTO());
+        assertTrue(applicationRepository.findAll().stream().anyMatch(app -> app.getApplicationId().equals(id)));
     }
 
     @Transactional
     @Test
     void testValidateOfferDoesNotThrow() {
-        Application application1 = new Application();
-        application1.setApplicationStatus(ApplicationStatus.PREAPPROVAL);
-        applicationRepository.save(application1);
-
-        long i = applicationRepository.findAll().getFirst().getApplicationId();
-        Application application = applicationRepository.findById(i).get();
-        LoanOfferDTO loanOfferDTO = new LoanOfferDTO(i, BigDecimal.valueOf(100000), BigDecimal.valueOf(100000),
-                10, BigDecimal.valueOf(10000), BigDecimal.valueOf(10), true, true);
-
-        application.setLoanOffers(List.of(loanOfferDTO));
+        List<LoanOfferDTO> offers = getTestLoanOffers(application.getApplicationId());
+        application.setLoanOffers(offers);
         applicationRepository.save(application);
 
-        assertDoesNotThrow(() -> repositoryService.validateOffer(loanOfferDTO));
+        assertDoesNotThrow(() -> repositoryService.validateOffer(offers.getFirst()));
+    }
+
+    private List<LoanOfferDTO> getTestLoanOffers(Long applicationId) {
+        List<LoanOfferDTO> loanOfferDTOList = new ArrayList<>();
+        for (int i = 0; i < 4; i++) {
+            loanOfferDTOList.add(
+                    new LoanOfferDTO(applicationId, BigDecimal.valueOf(100000),
+                            BigDecimal.valueOf(100000), 6, BigDecimal.valueOf(10000),
+                            BigDecimal.valueOf(10), true, true)
+            );
+        }
+        return loanOfferDTOList;
     }
 
     @Transactional
     @Test
     void testValidateOfferThrow() {
-        Application application1 = new Application();
-        application1.setApplicationStatus(ApplicationStatus.PREAPPROVAL);
-        applicationRepository.save(application1);
-
-        long i = applicationRepository.findAll().getFirst().getApplicationId();
-        Application application = applicationRepository.findById(i).get();
-        LoanOfferDTO loanOfferDTO = new LoanOfferDTO(i, BigDecimal.valueOf(100000), BigDecimal.valueOf(100000),
-                10, BigDecimal.valueOf(10000), BigDecimal.valueOf(10), true, true);
-
-        application.setLoanOffers(List.of(loanOfferDTO));
+        List<LoanOfferDTO> offers = getTestLoanOffers(application.getApplicationId());
+        application.setLoanOffers(offers);
         applicationRepository.save(application);
+        LoanOfferDTO loanOfferDTODoesNotExist = new LoanOfferDTO(application.getApplicationId(), BigDecimal.valueOf(100000), BigDecimal.valueOf(100000),
+                0, BigDecimal.valueOf(10000), BigDecimal.valueOf(10), true, true);
 
-        LoanOfferDTO loanOfferDTODoesNotExist = new LoanOfferDTO(i, BigDecimal.valueOf(100000), BigDecimal.valueOf(100000),
-                1, BigDecimal.valueOf(10000), BigDecimal.valueOf(10), true, true);
         assertThrows(OfferDoesNotExistException.class, () -> repositoryService.validateOffer(loanOfferDTODoesNotExist));
-        assertEquals(applicationRepository.findById(i).get().getApplicationStatus(), ApplicationStatus.CLIENT_DENIED);
+        assertEquals(applicationRepository.findById(application.getApplicationId()).get().getApplicationStatus(), ApplicationStatus.CLIENT_DENIED);
     }
 
     @Transactional
     @Test
     void testGetEmailAddressByApplicationId() {
-        String emailAddress = "test@test.com";
+        String expectedEmailAddress = getTestLoanApplicationRequestDTO().getEmail();
 
-        Client client = clientRepository.save(new Client().setEmail(emailAddress));
-        Application application = applicationRepository.save(new Application().setClient(client));
+        assertEquals(expectedEmailAddress, repositoryService.getEmailAddressByApplicationId(application.getApplicationId()));
+    }
 
-        assertEquals(emailAddress, repositoryService.getEmailAddressByApplicationId(application.getApplicationId()));
+    private FinishRegistrationRequestDTO getTestFinishRegistrationRequestDTO() {
+        return new FinishRegistrationRequestDTO(
+                Gender.FEMALE, MaritalStatus.MARRIED, 1, LocalDate.now().plusDays(10),
+                "branch", new EmploymentDTO(EmploymentStatus.EMPLOYED, "1234567890",
+                BigDecimal.valueOf(10000), EmploymentPosition.WORKER, 12, 10),
+                "1234567890");
     }
 
     @Transactional
     @Test
     void testSaveClientAdditionalInfo() {
-        FinishRegistrationRequestDTO dto = new FinishRegistrationRequestDTO(
-                Gender.FEMALE, MaritalStatus.MARRIED, 1, LocalDate.now().plusDays(10), "branch",
-                new EmploymentDTO(EmploymentStatus.EMPLOYED, "1234567890", BigDecimal.valueOf(10000), EmploymentPosition.WORKER, 12, 10), "1234567890");
-        Client client = clientRepository.save(new Client().setLastName("Test").setFirstName("User")
-                .setBirthdate(LocalDate.of(2000, 1, 1))
-                .setPassport(new Passport("000000", "0000", null, null))
-                .setEmail("test@mail.com"));
-        Application application = applicationRepository.save(new Application().setClient(client));
+        FinishRegistrationRequestDTO finishRegistration = getTestFinishRegistrationRequestDTO();
 
-
-        repositoryService.saveClientAdditionalInfo(dto, application.getApplicationId());
+        repositoryService.saveClientAdditionalInfo(finishRegistration, application.getApplicationId());
 
         Application savedApplication = applicationRepository.findById(application.getApplicationId()).get();
-        assertEquals(savedApplication.getClient().getEmail(), client.getEmail());
-        assertEquals(savedApplication.getClient().getGender(), dto.getGender());
-        assertEquals(savedApplication.getClient().getMaritalStatus(), dto.getMaritalStatus());
-        assertEquals(savedApplication.getClient().getDependentAmount(), dto.getDependentAmount());
-        assertEquals(savedApplication.getClient().getEmployment(), dto.getEmployment());
-        assertEquals(savedApplication.getClient().getAccount(), dto.getAccount());
-        assertEquals(savedApplication.getClient().getPassport().getIssueBranch(), dto.getPassportIssueBranch());
-        assertEquals(savedApplication.getClient().getPassport().getIssueDate(), dto.getPassportIssueDate());
+        assertEquals(savedApplication.getClient().getEmail(), application.getClient().getEmail());
+        assertEquals(savedApplication.getClient().getGender(), finishRegistration.getGender());
+        assertEquals(savedApplication.getClient().getMaritalStatus(), finishRegistration.getMaritalStatus());
+        assertEquals(savedApplication.getClient().getDependentAmount(), finishRegistration.getDependentAmount());
+        assertEquals(savedApplication.getClient().getEmployment(), finishRegistration.getEmployment());
+        assertEquals(savedApplication.getClient().getAccount(), finishRegistration.getAccount());
+        assertEquals(savedApplication.getClient().getPassport().getIssueBranch(), finishRegistration.getPassportIssueBranch());
+        assertEquals(savedApplication.getClient().getPassport().getIssueDate(), finishRegistration.getPassportIssueDate());
     }
 
     @Transactional
     @Test
     void testCalculate() {
-        Application application = applicationRepository.save(new Application());
+        CreditDTO creditDTO = getTestCreditDTO();
 
-        CreditDTO dto = new CreditDTO(
-                BigDecimal.valueOf(10000), 10, BigDecimal.valueOf(1000), BigDecimal.valueOf(10), BigDecimal.valueOf(10000),
-                true, true, new ArrayList<>()
-        );
-
-        repositoryService.calculate(application.getApplicationId(), dto);
+        repositoryService.calculate(application.getApplicationId(), creditDTO);
 
         Application savedApplication = applicationRepository.findById(application.getApplicationId()).get();
         Credit credit = savedApplication.getCredit();
         assertEquals(savedApplication.getApplicationStatus(), ApplicationStatus.CC_APPROVED);
         assertEquals(credit.getCreditStatus(), CreditStatus.CALCULATED);
-        assertEquals(credit.getAmount(), dto.getAmount());
-        assertEquals(credit.getTerm(), dto.getTerm());
+        assertEquals(credit.getAmount(), creditDTO.getAmount());
+        assertEquals(credit.getTerm(), creditDTO.getTerm());
     }
 
     @Transactional
     @Test
     void testOffer() {
-        Application application = applicationRepository.save(new Application());
-
-        LoanOfferDTO loanOffer = new LoanOfferDTO(application.getApplicationId(), BigDecimal.valueOf(100000), BigDecimal.valueOf(100000),
-                10, BigDecimal.valueOf(10000), BigDecimal.valueOf(10), true, true);
+        LoanOfferDTO loanOffer = getTestLoanOffers(application.getApplicationId()).getFirst();
 
         repositoryService.offer(loanOffer);
 
-        Application newApplication = applicationRepository.findById(application.getApplicationId()).get();
-        assertEquals(newApplication.getApplicationStatus(), ApplicationStatus.APPROVED);
-        assertEquals(newApplication.getAppliedOffer(), loanOffer);
+        Application savedApplication = applicationRepository.findById(application.getApplicationId()).get();
+        assertEquals(savedApplication.getApplicationStatus(), ApplicationStatus.APPROVED);
+        assertEquals(savedApplication.getAppliedOffer(), loanOffer);
     }
 
     @Transactional
     @Test
     void testGetApplicationByIdThrowException() {
-        Application application = applicationRepository.save(new Application());
-        applicationRepository.save(application);
-
-        assertThrows(ApplicationNotFoundException.class, () -> repositoryService.getApplicationById(application.getApplicationId() + 1L));
+        assertThrows(ApplicationNotFoundException.class,
+                () -> repositoryService.getApplicationById(application.getApplicationId() + 1L));
     }
 
     @Transactional
     @Test
     void testGetApplicationById() {
-        Application application = applicationRepository.save(new Application());
-        applicationRepository.save(application);
-
         assertEquals(repositoryService.getApplicationById(application.getApplicationId()), application);
     }
 
     @Transactional
     @Test
     void testSetApplicationStatus() {
-        Application application = applicationRepository.save(new Application());
         ApplicationStatus applicationStatus = ApplicationStatus.APPROVED;
 
         repositoryService.setApplicationStatus(application.getApplicationId(), applicationStatus);
@@ -212,49 +197,33 @@ public class RepositoryServiceTest extends IntegrationEnvironment {
     @Transactional
     @Test
     void testGetAllApplications() {
-        Application application = applicationRepository.save(new Application());
-        applicationRepository.save(application);
-
         List<Application> applications = repositoryService.getAllApplications();
         assertEquals(applications.size(), 1);
-        assertEquals(applications.get(0), application);
+        assertEquals(applications.getFirst(), application);
     }
 
     @Transactional
     @Test
     void testGetScoringData() {
-        FinishRegistrationRequestDTO dto = new FinishRegistrationRequestDTO(
-                Gender.FEMALE, MaritalStatus.MARRIED, 1, LocalDate.now().plusDays(10), "branch",
-                new EmploymentDTO(EmploymentStatus.EMPLOYED, "1234567890", BigDecimal.valueOf(10000), EmploymentPosition.WORKER, 12, 10), "1234567890");
-        Client client = clientRepository.save(new Client().setLastName("Test").setFirstName("User")
-                .setBirthdate(LocalDate.of(2000, 1, 1))
-                .setPassport(new Passport("000000", "0000", null, null))
-                .setEmail("test@mail.com"));
-        Application application = applicationRepository.save(new Application().setClient(client));
+        FinishRegistrationRequestDTO dto = getTestFinishRegistrationRequestDTO();
         repositoryService.saveClientAdditionalInfo(dto, application.getApplicationId());
-        LoanOfferDTO loanOffer = new LoanOfferDTO(application.getApplicationId(), BigDecimal.valueOf(100000), BigDecimal.valueOf(100000),
-                10, BigDecimal.valueOf(10000), BigDecimal.valueOf(10), true, true);
-        application.setAppliedOffer(loanOffer);
-        applicationRepository.save(application);
+        repositoryService.offer(getTestLoanOffers(application.getApplicationId()).getFirst());
 
-
-        ScoringDataDTO excpectedScoringData = new ScoringDataDTO(
-                BigDecimal.valueOf(100000), 10, "User", "Test", null, Gender.FEMALE, LocalDate.of(2000, 1, 1),
-                "000000", "0000", LocalDate.now().plusDays(10), "branch", MaritalStatus.MARRIED, 1,
+        ScoringDataDTO expectedScoringData = new ScoringDataDTO(
+                BigDecimal.valueOf(100000), 6, "User", "Test", "Test",
+                Gender.FEMALE, LocalDate.of(2000, 1, 1), "0000",
+                "000000", LocalDate.now().plusDays(10), "branch",
+                MaritalStatus.MARRIED, 1,
                 new EmploymentDTO(EmploymentStatus.EMPLOYED, "1234567890", BigDecimal.valueOf(10000), EmploymentPosition.WORKER, 12, 10),
                 "1234567890", true, true
         );
 
-
-        ScoringDataDTO scoringDataDTO = repositoryService.getScoringData(dto, application.getApplicationId());
-
-        assertEquals(scoringDataDTO, excpectedScoringData);
+        assertEquals(repositoryService.getScoringData(dto, application.getApplicationId()), expectedScoringData);
     }
 
     @Transactional
     @Test
     void setSesCode() {
-        Application application = applicationRepository.save(new Application());
         String sesCode = UUID.randomUUID().toString();
 
         repositoryService.setSesCode(application.getApplicationId(), sesCode);
@@ -265,26 +234,19 @@ public class RepositoryServiceTest extends IntegrationEnvironment {
     @Transactional
     @Test
     void getSesCode() {
-        Application application = applicationRepository.save(
-                new Application().setSesCode(UUID.randomUUID().toString()));
+        String expectedSesCode = UUID.randomUUID().toString();
+        application.setSesCode(expectedSesCode);
+        applicationRepository.save(application);
 
         String sesCode = repositoryService.getSesCode(application.getApplicationId());
 
-        assertEquals(sesCode, application.getSesCode());
+        assertEquals(sesCode, expectedSesCode);
     }
 
     @Transactional
     @Test
     void testSaveLoanOffers() {
-        Application application = applicationRepository.save(new Application());
-        List<LoanOfferDTO> loanOffers = new ArrayList<>();
-        for (int i = 0; i < 4; i++) {
-            loanOffers.add(
-                    new LoanOfferDTO(application.getApplicationId(), BigDecimal.valueOf(100000),
-                            BigDecimal.valueOf(100000), 10, BigDecimal.valueOf(10000),
-                            BigDecimal.valueOf(10), true, true)
-            );
-        }
+        List<LoanOfferDTO> loanOffers = getTestLoanOffers(application.getApplicationId());
 
         repositoryService.saveLoanOffers(application.getApplicationId(), loanOffers);
 
@@ -294,9 +256,6 @@ public class RepositoryServiceTest extends IntegrationEnvironment {
     @Transactional
     @Test
     void testGetApplicationStatus() {
-        Application application = applicationRepository.save(
-                new Application().setApplicationStatus(ApplicationStatus.APPROVED));
-
         ApplicationStatus applicationStatus = repositoryService.getApplicationStatus(application.getApplicationId());
 
         assertEquals(applicationStatus, application.getApplicationStatus());
@@ -305,16 +264,25 @@ public class RepositoryServiceTest extends IntegrationEnvironment {
     @Transactional
     @Test
     void testSetSignDate() {
-        Application application = applicationRepository.save(new Application());
-
         repositoryService.setSignDate(application.getApplicationId());
 
         assertNotNull(application.getSignDate());
     }
 
+    private CreditDTO getTestCreditDTO() {
+        return new CreditDTO(
+                BigDecimal.valueOf(10000), 10, BigDecimal.valueOf(1000), BigDecimal.valueOf(10),
+                BigDecimal.valueOf(10000), true, true, new ArrayList<>()
+        );
+    }
 
-    @AfterEach
-    void tearDown() {
-        applicationRepository.deleteAll();
+    @Transactional
+    @Test
+    void testSetCreditStatus() {
+        repositoryService.calculate(application.getApplicationId(), getTestCreditDTO());
+        repositoryService.setCreditStatus(application.getApplicationId(), CreditStatus.ISSUED);
+
+        assertEquals(applicationRepository.findById(application.getApplicationId()).get().getCredit().getCreditStatus(),
+                CreditStatus.ISSUED);
     }
 }
